--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -158,7 +158,7 @@
               <a *ngIf="viewFlag.viewPayment" href="javascript:void(0)" [routerLink]="['/companyPayment/payment']" id="collapseExample6">Payment</a>
               <a *ngIf="viewFlag.viewpayrollList" href="javascript:void(0)" [routerLink]="['/companyPayment/payroll']" id="collapseExample6">Payroll</a>
               <a *ngIf="viewFlag.viewExpenseList" href="javascript:void(0)" [routerLink]="['/companyPayment/expense']" id="collapseExample6">Expenses</a>
-              <a *ngIf="viewFlag.viewPettyCashReport" href="javascript:void(0)" [routerLink]="['/companyPayment/pettyCash']" id="collapseExample6">PettyCash</a>
+              <a *ngIf="viewFlag.viewPettyCashReport" href="javascript:void(0)" [routerLink]="['/companyPayment/pettyCash']" id="collapseExample6">PettyCash</a> 
             </div>
           </div>
           <!-- companyadmin end company payment -->
@@ -169,6 +169,7 @@
             <div class="drop-content" id="collapseExampleLs">
               <a  *ngIf="viewFlag.viewLocationTracker" href="javascript:void(0)" [routerLink]="['/inventory/location-tracker']" id="collapseExampleLs">Location Tracker</a>
               <a  *ngIf="viewFlag.viewPhysicalList" href="javascript:void(0)" [routerLink]="['/inventory/physical-List']" id="collapseExampleLs">Stock Check</a>
+              <a  *ngIf="viewFlag.viewPhysicalList" href="javascript:void(0)" [routerLink]="['/inventory/recycleBin']" id="collapseExampleLs">Recycle Bin</a> 
             </div>
           </div>
           <!-- companyadmin end company payment -->
