--- a/server/views/customerPowerPDF.ejs
+++ b/server/views/customerPowerPDF.ejs
@@ -756,9 +756,13 @@
                                        <% if (data.otherContant===true) { %>
                                           <h6 <% %> style="color: <%= data.Color %>;"> Contact RX</h6>
                                           <%} %>
+
                                              <% if (data.otherNoPower===true) { %>
-                                                <h6 <% %> style="color: <%= data.Color %>;"> Other RX</h6>
+                                                   <% if (data.customer.CompanyID != 322) { %>
+                                                      <h6 <% %> style="color: <%= data.Color %>;"> Other RX</h6>
+                                                   <%} %>
                                                 <%} %>
+
                                                    <!-- other title name  -->
                   </section>
                   <!-- power spec -->
@@ -911,82 +915,16 @@
                                     </section>
                                     <%} %>
          
-                                       <section>
-                                          <table style="width: 50%; float: right; font-size: 15px; text-align: left; ">
-         
-                                             <tr>
-                                                <th rowspan="2">VN : -</th>
-                                                <td style="text-align: left;">R - <%=data.other.R_VN%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <td>L - <%=data.other.L_VN%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <th rowspan="2">TN : -</th>
-                                                <td>R - <%=data.other.R_TN%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <td>L - <%=data.other.L_TN%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <th rowspan="2">SY/KR : -</th>
-                                                <td>R - <%=data.other.R_KR%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <td>L - <%=data.other.L_KR%>
-                                                </td>
-                                             </tr>
-         
-                                             <tr>
-                                                <th style="padding-top: 20px;">IOL Power:</th>
-                                                <td style="padding-top: 20px;">
-                                                   <%=data.other.IOL_Power%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <th style="padding-top: 20px;">Operation:</th>
-                                                <td style="padding-top: 20px;">
-                                                   <%=data.other.Operation%>
-                                                </td>
-                                             </tr>
-         
-                                             <tr>
-                                                <th style="padding-top: 20px;">Sugar:</th>
-                                                <td style="padding-top: 20px;">
-                                                   <%=data.other.Sugar%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <th style="padding-top: 20px;">B.P.:</th>
-                                                <td style="padding-top: 20px;">
-                                                   <%=data.other.BP%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <th style="padding-top: 20px;">Diagnosis:</th>
-                                                <td style="padding-top: 20px;">
-                                                   <%=data.other.Diagnosis%>
-                                                </td>
-                                             </tr>
-                                             <tr>
-                                                <th style="width: 20px; padding-top: 20px;">Treatment:</th>
-                                                <td style="padding-top: 20px;">
-                                                   <%=data.other.Treatment%>
-                                                </td>
-                                             </tr>
-         
-                                          </table>
+                                       <section style="height: 300px; padding-top: 1%;">
+                                          <h1 style="font-size: 2.5rem;"> Rx </h1>
+                                          <h1 style="font-size: 1.5rem;"> <%=data.other.Treatment%> </h1>
                                        </section>
                                        <%} %>
          
                                           <!-- footer -->
                                           <div class="rowFooter1">
                                              <div class="col1">
+                                                <% if (data.mode !== 'other') { %>
                                                 <h3 <% %> style="padding: 0;margin: 0; color: <%= data.Color %>"></h3>
                                                 <% if(data.powerNoteShop.length !==0){ data.powerNoteShop.forEach(function (i,
                                                    index) { %>
@@ -994,6 +932,7 @@
                                                       <%=i.Content%>
                                                    </p>
                                                    <%})}%>
+                                                   <%} %>
                                              </div>
                                              <div class="col2">
                                                 <h3 style="padding: 0;margin: 0;">.......................................................................
