--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -1489,7 +1489,8 @@
                                     </div>
                                 </div>
                             </mat-tab>
-                            <!-- get Product Cancel -->
+                            <!-- get Product  Cancel  remove live -->
+
                             <mat-tab *ngIf="viewProductCancelReport" label="Product Cancel">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getProductCancel()">
@@ -2082,6 +2083,7 @@
                                     </div>
                                 </div>
                             </mat-tab>
+                            
                             <!-- pending product  -->
                             <mat-tab *ngIf="viewSaleProductPendingReport" label="Product Pending">
                                 <div class="body">
