--- a/web1/src/app/shared/dashcard/dashcard.component.css
+++ b/web1/src/app/shared/dashcard/dashcard.component.css
@@ -8,6 +8,19 @@
     background: linear-gradient(90deg, rgba(255, 255, 255, 0.233) 0%, rgb(255, 255, 255) 100%);
     border-bottom: dashed;
   }
+.cardN {
+    border-left: 5px solid rgb(255, 81, 0);
+    box-shadow: 7px 7px 17px #6b6866;
+    transition: 1s;
+    margin-top: 30px !important;
+    animation-name: example;
+    animation-duration: 9s;
+    background: linear-gradient(90deg, rgba(255, 255, 255, 0.233) 0%, rgb(255, 255, 255) 100%);
+    border-bottom: dashed 1px;
+    padding: 25px;
+    border-radius: 10px;
+    background: #fff;
+  }
 
   .cardM{
     border: 0px solid rgb(255, 81, 0);
@@ -45,10 +58,14 @@
     color: rgb(69, 69, 69);
   }
   
-  .card:hover {
+  .card:hover{
     transform: scale(0.9);
     box-shadow: 5px 5px 10px #de5c04;
     border: 2px solid #f37623;
+  }
+
+ .cardN:hover{
+    transform: scale(0.96);
   }
   
   .cards {
