--- a/web1/src/app/shared/dashcard/dashcard.component.html
+++ b/web1/src/app/shared/dashcard/dashcard.component.html
@@ -14,7 +14,7 @@
     </div>
 </a> -->
 
-<a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc d-md-block d-none">
+<!-- <a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc d-md-block d-none">
     <div class="card " type="submit" (click)="function()">
         <div class="row" style="padding: 10px;">
             <div class="col-9 pt-3 p-0">
@@ -28,7 +28,26 @@
             </div>
         </div>
     </div>
+</a> -->
+
+<!-- new create  -->
+<a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc d-md-block d-none">
+    <div class="cardN " type="submit" (click)="function()">
+        <div class="row" style="padding: 10px;">
+            <div class="col-9 pt-3 p-0">
+                <span class="ml-auto name" style="font-size:25px;font-weight:600;margin-top:5%;">
+                    <span class="first-letter">{{ title.charAt(0) }}</span>{{ title.slice(1) }}
+                </span>
+            </div>
+            <div class="col-3 p-0" style="padding-left: 25px !important;">
+                <img src={{icon}} class="float-left " alt="" width="60" height="60" style="padding: 10px;
+                background: #1e2672; border-radius: 42px; border-radius: 42px; border: 4px solid #ff5100;">
+            </div>
+        </div>
+    </div>
 </a>
+<!-- new create  -->
+
 
 <a href="javascript:void(0)" routerLink={{routersLinks}} class="hoc d-md-none d-block ">
     <div class="cardM " type="submit" (click)="function()">
