--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -145,7 +145,8 @@ thead :not([scope=row]):first-child {
 }
 
 .content {
-    background-image: url(assets/images/SHOP.svg);
+    // background-image: url(assets/images/SHOP.svg);
+    background-image: linear-gradient(155deg, rgb(255, 233, 223) 50%, rgb(186, 211, 255) 60%);
     background-size: 100%;
     zoom: 100%;
     // -webkit-user-select: none;
