--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -1695,10 +1695,10 @@
                                             </div>
 
                                             <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0 ">
-                                                <button class="me-3" type="submit" mat-raised-button color="primary">
+                                                <button  type="submit" mat-raised-button color="primary">
                                                     Search
                                                 </button>
-                                                <button type="button" mat-raised-button color="warn"
+                                                <button class="me-2  ms-2" type="button" mat-raised-button color="warn"
                                                     (click)="BillPendingFromReset()">
                                                     Reset
                                                 </button>
