--- a/web1/src/app/admin/summary/summary.component.html
+++ b/web1/src/app/admin/summary/summary.component.html
@@ -194,7 +194,7 @@
                             <th>Expenss</th>
                             <th>New Bill</th>
                             <th>New Customer</th>
-                            <th>New EyeTest</th>
+                            <!-- <th>New EyeTest</th> -->
                         </tr>
                     </thead>
                     <tbody>
@@ -222,7 +222,7 @@
                             <td>{{data.Expenses}}</td>
                             <td>{{data.NewBill}}</td>
                             <td>{{data.NewCustomer}}</td>
-                            <td>{{data.NewEyeTest}}</td>
+                            <!-- <td>{{data.NewEyeTest}}</td> -->
                         </tr>
                     </tbody>
 
@@ -252,7 +252,7 @@
                             <th >{{this.Expenses}} </th>
                             <th >{{this.NewBill}} </th>
                             <th >{{this.NewCustomer}} </th>
-                            <th >{{this.NewEyeTest}} </th>
+                            <!-- <th >{{this.NewEyeTest}} </th> -->
                         </tr>
                     </tfoot>
 
